# RAG_CRM_Chatbot

./: .env  README.md  app.py  ask.py  built_store.py  chatbot_chain.py  crm_extractor.py  embed_store.py  faiss_index.pkl  formatters.py  main.py  pyproject.toml  query_llama.py  requirements.txt
Old Files/: ask.py
faiss_index/: index.faiss  index.pkl
